--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -24,7 +24,6 @@
       line-height: 28px;
       font-weight: bold;
       font-family: "AvenirNextLTPro-Ultlt", "Helvetica Neue", Helvetica, Arial, sans-serif;
-      letter-spacing: -1px;
       cursor: default;
       -webkit-font-smoothing: antialiased;
       text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -372,7 +371,6 @@
       margin: 7px 0 0 0;
       font-family: "AvenirNextLTPro-UltLt", "HelveticaNeue-Light", Helvetica, Arial, sans-serif;
       font-weight: bold;
-      letter-spacing: -1px;
     }
 
     li {
